--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,13 @@
-.header
+body
 {
+    margin: 0;
+}
+.content
+{
+    max-width: 1400px;
     margin: auto;
-    &__title
-    {
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font: 25px;
-        color: rgba(170, 28, 28, 0.411);
-    }
+}
+footer
+{
+  background-color:gray ;
 }
