--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,3 @@
-@import "./layout/footer", "./layout/header", "./layout/index";
+@import "./layout/footer", "./layout/header", "./layout/location";
 @import "./base/typorgraphy";
+@import "./pages/index";
