--- a/assets/sass/layout/_location.scss
+++ b/assets/sass/layout/_location.scss
@@ -1,6 +1,5 @@
 .location {
     text-align: center;
     display: flex;
-    flex-direction: row;
-    vertical-align: middle;
+    align-items: center;
 }
