--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,3 @@
 @import "./layout/footer", "./layout/header", "./layout/location";
-@import "./base/typorgraphy";
+@import "./base/typography";
 @import "./pages/index";
