--- a/assets/sass/pages/_index.scss
+++ b/assets/sass/pages/_index.scss
@@ -5,6 +5,9 @@
             height: 250px;
             object-fit: cover;
         }
+        &__card {
+            flex: 1 1 250px;
+        }
 }
 .content
 {
