--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,27 @@
+footer {
+  background-color: #363636;
+}
+
+h3.footer__title {
+  color: white;
+  margin: 0;
+}
+
+.footer__bloc {
+  padding: 10px 0;
+}
+.footer__bloc > ul {
+  list-style: none;
+  padding: 0;
+  margin: 10px 0;
+  color: white;
+}
+
 .header {
   text-align: center;
+  box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
+  -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
+  -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
 }
 
 .location {
@@ -8,16 +30,22 @@
   align-items: center;
 }
 
-@font-face {
-  font-family: Shrikhand;
-  src: url("../../fonts/shrikhand/Shrikhand-Regular.otf");
+body {
+  margin: 0;
 }
-@font-face {
-  font-family: Roboto;
-  src: url("../../fonts/roboto-slab/RobotoSlab-Regular.ttf");
+
+.content {
+  max-width: 1400px;
+  margin: auto;
 }
-h1, h3 {
+
+h1,
+h3 {
   font-family: "Shrikhand";
+}
+
+p {
+  font-family: "Roboto";
 }
 
 .restaurant {
@@ -30,11 +58,6 @@ h1, h3 {
 }
 .restaurant__card {
   flex: 1 1 250px;
-}
-
-.content {
-  max-width: 1400px;
-  margin: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
