--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,18 +1,8 @@
-@font-face {
-
-    font-family: Shrikhand;
-    
-    src: url('../../fonts/shrikhand/Shrikhand-Regular.otf');
-    
-    }
-@font-face {
-
-        font-family: Roboto;
-        
-        src: url('../../fonts/roboto-slab/RobotoSlab-Regular.ttf');
-        
-        }
-        
-h1, h3 {
-        font-family: 'Shrikhand';
-    }
+h1,
+h3 {
+    font-family: "Shrikhand";
+}
+p
+{
+    font-family: "Roboto";
+}
