--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,3 +1,6 @@
 .header {
     text-align: center;
+    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
 }
