--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,3 @@
-@import "./layout/footer", "./layout/header", "./layout/location";
+@import "./layout/footer", "./layout/header", "./layout/location", "./layout/body";
 @import "./base/typography";
 @import "./pages/index";
