--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,3 +1,4 @@
-@import "./layout/footer", "./layout/header", "./layout/location", "./layout/body";
+@import "./layout/footer", "./layout/header", "./layout/location", "./layout/body", "./layout/restaurant", "./layout/reservation";
 @import "./base/typography";
 @import "./pages/index";
+@import "./utils/mixins";
