--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,10 +24,27 @@ h3.footer__title {
   -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
 }
 
+h1 {
+  padding: 20px;
+  margin: 0;
+}
+
 .location {
+  margin-top: 3px;
+}
+
+.location {
+  background-color: #eaeaea;
+  display: flex;
+  justify-content: center;
+}
+.location__bloc {
   text-align: center;
   display: flex;
   align-items: center;
+}
+.location__search {
+  margin-left: 10px;
 }
 
 body {
@@ -37,6 +54,19 @@ body {
 .content {
   max-width: 1400px;
   margin: auto;
+}
+
+.reservation {
+  text-align: center;
+}
+.reservation__button {
+  background-color: pink;
+  margin: auto;
+  width: 200px;
+  border-radius: 25px;
+}
+.reservation__button > a {
+  margin: 25px;
 }
 
 h1,
