--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -4,3 +4,10 @@
     -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
     -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
 }
+h1 {
+    padding: 20px;
+    margin: 0;
+}
+.location {
+    margin-top: 3px;
+}
