--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -5,8 +5,8 @@
         margin: auto;
         width: 200px;
         border-radius: 25px;
-        & > a {
-            margin: 25px;
+        & > p {
+            padding: 20px;
         }
     }
 }
