--- a/assets/sass/layout/_presentation.scss
+++ b/assets/sass/layout/_presentation.scss
@@ -1,3 +1,10 @@
 .presentation {
     text-align: center;
+    &__container {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__card {
+        border: solid 1px grey;
+    }
 }
