Création variable.scss

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,4 @@
 @import "./layout/footer", "./layout/header", "./layout/location", "./layout/body", "./layout/restaurant", "./layout/reservation", "./layout/presentation";
 @import "./base/typography";
 @import "./pages/index";
-@import "./utils/mixins";
+@import "./utils/mixins", "./utils/variables";
