--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,15 +56,17 @@ body {
   margin: auto;
 }
 
-.restaurant__card > img {
-  height: 250px;
-  width: 100%;
-  object-fit: cover;
-}
 .restaurant__card {
   flex: 1 1 500px;
   max-width: 50%;
   min-width: 400px;
+  border-radius: 0 0 25px 25px;
+}
+.restaurant__card > img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 25px 25px 0 0;
 }
 .restaurant__container {
   display: flex;
@@ -86,9 +88,6 @@ body {
   padding: 20px;
 }
 
-.presentation {
-  text-align: center;
-}
 .presentation__container {
   display: flex;
   justify-content: space-between;
