--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -1,14 +1,15 @@
 .restaurant {
-
-        &__card > img {
-            height: 250px;
-            width: 100%;
-            object-fit: cover;
-        }
         &__card {
             flex: 1 1 500px;
             max-width: 50%;
             min-width: 400px;
+            border-radius: 0 0 25px 25px;
+            & > img {
+                height: 200px;
+                width: 100%;
+                object-fit: cover;
+                border-radius: 25px 25px 0 0;
+            }
         }
         &__container {
             display: flex;
