--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -1,5 +1,6 @@
 .reservation{
     text-align: center;
+    background-color: #fafafa;
     &__button{
         background-color: pink;
         margin: auto;
