--- a/assets/sass/layout/_presentation.scss
+++ b/assets/sass/layout/_presentation.scss
@@ -1,7 +1,8 @@
 .presentation {
+    padding-bottom: 20px;
     &__container {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
     }
     &__card {
         border: solid 1px grey;
