--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -1,13 +1,16 @@
 .reservation{
     text-align: center;
     background-color: #fafafa;
+    padding-bottom: 20px;
     &__button{
-        background-color: pink;
-        margin: auto;
-        width: 200px;
+        background: linear-gradient(to top left, #a85ddb, #ec73da);
+        width: 250px;
+        text-align: center;
         border-radius: 25px;
+        margin: auto;
         & > p {
-            padding: 20px;
+            color: white;
+            padding: 10px 0;
         }
     }
 }
