--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+h2 {
+  margin: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 footer {
   background-color: #363636;
 }
@@ -89,6 +95,13 @@ body {
   text-align: center;
   border-radius: 25px;
   margin: auto;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0px 5px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+}
+.reservation__button:hover {
+  background: linear-gradient(to top left, #ae6adb, #eb7eda);
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 3px 7px 13px -5px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
 }
 .reservation__button > p {
   color: white;
@@ -103,7 +116,16 @@ body {
   justify-content: space-around;
 }
 .presentation__card {
-  border: solid 1px grey;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0px 5px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  border-radius: 25px;
+  width: 30%;
+  display: flex;
+  align-items: center;
+  padding-left: 15px;
+}
+.presentation__card > p {
+  padding: 10px 20px;
 }
 
 h1,
@@ -116,10 +138,8 @@ h2 {
   font-family: "Roboto";
 }
 
-h2 {
-  margin: 0;
-  padding-top: 20px;
-  padding-bottom: 20px;
+a {
+  text-decoration: none;
 }
 
 /*# sourceMappingURL=style.css.map */
