--- a/assets/sass/utils/_mixins.scss
+++ b/assets/sass/utils/_mixins.scss
@@ -1,4 +1,7 @@
 @mixin radius {
-    border: solid 0;
-    border-radius: 35px;    
+    border-radius: 25px;    
+}
+@mixin box-shadow {
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0,0,0,0); 
+    box-shadow: 0px 5px 13px -7px #000000, 0px 0px 0px 0px rgba(0,0,0,0);
 }
