--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,19 @@ body {
   max-width: 50%;
   min-width: 400px;
   border-radius: 0 0 25px 25px;
+  -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  box-shadow: 0px 5px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  border-radius: 25px;
+  margin-bottom: 20px;
+}
+.restaurant__card-text {
+  padding-left: 20px;
+}
+.restaurant__card-text > p {
+  margin: 0;
+}
+.restaurant__card-text > h4 {
+  margin: 0;
 }
 .restaurant__card > img {
   height: 200px;
