--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -5,6 +5,19 @@
         max-width: 50%;
         min-width: 400px;
         border-radius: 0 0 25px 25px;
+        @include box-shadow;
+        @include radius;
+        margin-bottom: 20px;
+        &-text {
+            padding-left: 20px;
+            & > p
+            {
+                margin: 0;
+            }
+            & > h4 {
+                margin: 0;
+            }
+        }
         & > img {
             height: 200px;
             width: 100%;
