--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,25 @@ h2 {
   padding-bottom: 20px;
 }
 
+@media screen and (max-width: 1250px) {
+  .content {
+    padding: 0 10px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .presentation__container {
+    flex-direction: column;
+  }
+  .presentation__card {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 950px) {
+  .restaurant__card {
+    max-width: none;
+    width: 100%;
+  }
+}
 footer {
   background-color: #363636;
 }
@@ -66,8 +85,8 @@ body {
   background-color: #fafafa;
 }
 .restaurant__card {
-  flex: 1 1 500px;
-  max-width: 50%;
+  flex: 1;
+  width: 50%;
   min-width: 400px;
   border-radius: 0 0 25px 25px;
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
@@ -133,6 +152,7 @@ body {
   box-shadow: 0px 5px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
   border-radius: 25px;
   width: 30%;
+  min-width: 300px;
   display: flex;
   align-items: center;
   padding-left: 15px;
