--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -1,8 +1,8 @@
 .restaurant {
     background-color: #fafafa;
     &__card {
-        flex: 1 1 500px;
-        max-width: 50%;
+        flex: 1;
+        width: 50%;
         min-width: 400px;
         border-radius: 0 0 25px 25px;
         @include box-shadow;
