--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -7,6 +7,9 @@ h2 {
     .content {
         padding: 0 10px;
     }
+    .footer__bloc{
+        margin-left: 10px;
+    }
 }
 @media screen and (max-width: 1000px) {
     .presentation {
