--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -20,6 +20,11 @@ h2 {
             width: 100%;
         }
     }
+    .footer__bloc{
+        flex-direction: column;
+        text-align: left;
+        align-items: baseline;
+    }
 }
 @media screen and (max-width: 950px) {
     .restaurant {
