--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -4,18 +4,21 @@ footer {
 h3.footer__title {
     color: white;
     margin: 0;
-    margin-left: 20px;
+    margin: 20px;
 }
 .footer__bloc {
-    padding: 10px 0;
     display: flex;
-    align-items: center;
     column-gap: 15px;
+    justify-content: space-between;
     & > ul {
+        display: flex;
         list-style: none;
         padding: 0;
-        margin: 10px 0;
         color: white;
+        margin: 20px;
+        & li{
+            margin-left: 20px;
+        }
     }
 }
 .fa-utensils{
