--- a/assets/sass/utils/_variables.scss
+++ b/assets/sass/utils/_variables.scss
@@ -24,6 +24,9 @@ h2 {
         flex-direction: column;
         text-align: left;
         align-items: baseline;
+        & > ul {
+            flex-direction: column;
+        }
     }
 }
 @media screen and (max-width: 950px) {
