--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -3,8 +3,7 @@ footer {
 }
 h3.footer__title {
     color: white;
-    margin: 0;
-    margin: 20px;
+    margin: 10px 0 0 0;
 }
 .footer__bloc {
     display: flex;
@@ -15,9 +14,9 @@ h3.footer__title {
         list-style: none;
         padding: 0;
         color: white;
-        margin: 20px;
+        margin-top: 10px;
         & li{
-            margin-left: 20px;
+            margin-right: 15px;
         }
     }
 }
