--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -1,33 +1,35 @@
 .restaurant {
     background-color: #fafafa;
     &__card {
-        flex: 1;
-        width: 50%;
-        min-width: 400px;
+        flex: 1 1 auto;
+        width: 49%;
         border-radius: 0 0 25px 25px;
         @include box-shadow;
         @include radius;
         margin-bottom: 20px;
         &-text {
             padding: 20px;
-            & > p {
+            & > a p {
                 margin: 0;
             }
-            & > h4 {
+            & > a h4 {
                 margin: 0;
             }
         }
-        & > img {
-            height: 200px;
-            width: 100%;
-            object-fit: cover;
-            border-radius: 25px 25px 0 0;
+        & > a {
+            text-decoration: none;
+            & img {
+                height: 200px;
+                width: 100%;
+                object-fit: cover;
+                border-radius: 25px 25px 0 0;
+            }
         }
         &-icone {
             padding-right: 20px;
             & > .far {
                 font-size: 20px;
-                &:hover{
+                &:hover {
                     color: #a85ddb;
                     background-color: cadetblue;
                 }
