--- a/assets/sass/layout/_presentation.scss
+++ b/assets/sass/layout/_presentation.scss
@@ -27,7 +27,7 @@
                 border-radius: 20px;
                 padding: 5px 9px;
                 color: white;
-                background-color: #9356dc;
+                background-color: #9356DC;
             }
         }
     }
