--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -3,7 +3,7 @@
     background-color: #fafafa;
     padding-bottom: 20px;
     &__button{
-        background: linear-gradient(to top left, #a85ddb, #ec73da);
+        background: linear-gradient(to top left, #9356DC, #FF79DA);
         width: 220px;
         text-align: center;
         border-radius: 25px;
