--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -1,7 +1,7 @@
 .background__cover {
     height: 300px;
     width: 100%;
-    background-image: url("../../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+    background: url("../../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
 }
 .menu__container {
     background-color: white;
