--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,8 +1,8 @@
 .header {
     text-align: center;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
-    -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
-    -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.49);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.49);
 }
 h1 {
     padding: 20px;
@@ -10,4 +10,14 @@ h1 {
 }
 .location {
     margin-top: 3px;
+}
+.header {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    & .return > .fas {
+        font-size: 20px;
+        justify-content: flex-start;
+    }
 }
