--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,10 @@ h2 {
   padding-bottom: 20px;
 }
 
+.padding__20 {
+  padding: 0 20px;
+}
+
 @media screen and (max-width: 1250px) {
   .content {
     padding: 0 10px;
@@ -230,15 +234,28 @@ body {
   background-color: #9356DC;
 }
 
-.background__cover {
+.background__cover > img {
   height: 300px;
   width: 100%;
-  background: url("../../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg");
+  object-fit: cover;
 }
 
 .menu__container {
   background-color: white;
   border: 25px;
+}
+
+.menu__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: -40px;
+  position: relative;
+  background-color: white;
+  border-radius: 25px 25px 0 0;
+}
+.menu__header-h2 {
+  font-family: "Shrikhand";
 }
 
 h1,
