--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -18,7 +18,7 @@
     position: relative;
     background-color: white;
     border-radius: 25px 25px 0 0;
-    &-h2 {
+    & > h2 {
         font-family: "Shrikhand";
     }
 }
