Ajouts connes menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,6 +255,11 @@ body {
 .menu__container {
   background-color: white;
   border: 25px;
+  display: flex;
+  justify-content: space-between;
+}
+.menu__container h3 {
+  font-family: "Roboto";
 }
 
 .menu__header {
