--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -11,8 +11,19 @@
     border: 25px;
     display: flex;
     justify-content: space-between;
-    & h3{
+    & h3 {
         font-family: "Roboto";
+        position: relative;
+        padding-bottom: 1px;
+        &::after {
+            content: "";
+            width: 50px;
+            height: 4px;
+            background-color: #99e2d1;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
     }
 }
 .menu__header {
