--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -1,29 +1,9 @@
 .background__cover {
     & > img {
         object-fit: cover;
-        height: 300px;
+        height: 500px;
         width: 100%;
         position: relative;
-    }
-}
-.menu__container {
-    background-color: white;
-    border: 25px;
-    display: flex;
-    justify-content: space-between;
-    & h3 {
-        font-family: "Roboto";
-        position: relative;
-        padding-bottom: 1px;
-        &::after {
-            content: "";
-            width: 50px;
-            height: 4px;
-            background-color: #99e2d1;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-        }
     }
 }
 .menu__header {
@@ -32,9 +12,49 @@
     align-items: center;
     margin-top: -40px;
     position: relative;
-    background-color: white;
+    background-color: #f6f6f6;
     border-radius: 25px 25px 0 0;
+    padding: 0 20px;
     & > h2 {
         font-family: "Shrikhand";
+    }
+}
+.menu__container {
+    background-color: #f6f6f6;
+    border: 25px;
+    display: flex;
+    justify-content: space-between;
+    column-gap: 20px;
+    padding: 0 20px;
+    & h3 {
+        font-family: "Roboto";
+        position: relative;
+        padding-bottom: 6px;
+        &::after {
+            content: "";
+            width: 45px;
+            height: 3px;
+            background-color: #99e2d1;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+        }
+    }
+}
+.menu__column {
+    flex: 1 1 auto;
+}
+.menu__card {
+    background-color: white;
+    @include box-shadow;
+    border-radius: 15px;
+    padding: 15px 10px;
+    margin-bottom: 20px;
+    &-title > h4 {
+        margin: 0;
+    }
+    &-footer {
+        display: flex;
+        justify-content: space-between;
     }
 }
