--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -1,7 +1,7 @@
 .background__cover {
     & > img {
         object-fit: cover;
-        height: 500px;
+        max-height: 500px;
         width: 100%;
         position: relative;
     }
