--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,7 +252,7 @@ body {
 
 .background__cover > img {
   object-fit: cover;
-  height: 500px;
+  max-height: 500px;
   width: 100%;
   position: relative;
 }
