--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,7 @@ body {
   text-align: center;
   border-radius: 25px;
   margin: auto;
+  transition-duration: 400ms;
   -webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
   box-shadow: 0px 5px 13px -7px #000000, 0px 0px 0px 0px rgba(0, 0, 0, 0);
 }
