--- a/assets/sass/layout/_reservation.scss
+++ b/assets/sass/layout/_reservation.scss
@@ -8,6 +8,7 @@
         text-align: center;
         border-radius: 25px;
         margin: auto;
+        transition-duration: 400ms;
         @include box-shadow;
         &:hover{
             background: linear-gradient(to top left, #ae6adb, #eb7eda);
