--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -306,6 +306,9 @@ body {
   border-radius: 15px;
   padding: 15px 10px;
   margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
 }
 .menu__card-title > h4 {
   margin: 0;
@@ -313,6 +316,17 @@ body {
 .menu__card-footer {
   display: flex;
   justify-content: space-between;
+}
+.menu__card-container {
+  width: 100%;
+}
+
+.menu__card-animation {
+  width: 50px;
+  text-align: center;
+  margin-right: -50px;
+  margin-left: 10px;
+  background-color: #99e2d1;
 }
 
 .loader,
