--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -50,6 +50,9 @@
     border-radius: 15px;
     padding: 15px 10px;
     margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
     &-title > h4 {
         margin: 0;
     }
@@ -57,4 +60,14 @@
         display: flex;
         justify-content: space-between;
     }
+    &-container{
+        width: 100%;
+    }
+}
+.menu__card-animation{
+    width: 50px;
+    text-align: center;
+    margin-right: -50px;
+    margin-left: 10px;
+    background-color: #99e2d1;
 }
