--- a/assets/sass/utils/_media.scss
+++ b/assets/sass/utils/_media.scss
@@ -26,6 +26,9 @@
             flex-direction: column;
         }
     }
+    .menu__column{
+        max-width: 100%;
+    }
 }
 @media screen and (max-width: 950px) {
     .restaurant {
