--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -43,28 +43,43 @@
 }
 .menu__column {
     flex: 1 1 auto;
+    max-width: 32%;
 }
 .menu__card {
     background-color: white;
     @include box-shadow;
     border-radius: 15px;
-    padding: 15px 10px;
+    padding: 0;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
     overflow: hidden;
     &-title > h4 {
-        margin: 0;
+        margin: 10px 5px;
     }
     &-footer {
         display: flex;
         justify-content: space-between;
     }
-    &-container{
+    &-container {
         width: 100%;
     }
+    &-text {
+        margin-left: 5px;
+        margin-bottom: 5px;
+    }
+    &:hover .menu__card-animation {
+        margin-right: 0;
+        & > .fas {
+            transform: rotate(180deg);
+            transition-duration: .5s;
+        }
+    }
+    &:hover .menu__card-container {
+        width: 85%;
+    }
 }
-.menu__card-animation{
+.menu__card-animation {
     width: 50px;
     text-align: center;
     margin-right: -50px;
