--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h2 {
   }
 
   .menu__column {
-    max-width: 100%;
+    width: 100%;
   }
 }
 @media screen and (max-width: 950px) {
@@ -172,13 +172,15 @@ body {
 }
 .restaurant__card-icone {
   padding-right: 20px;
+  height: 20px;
+  width: 20px;
 }
 .restaurant__card-icone > .far {
   font-size: 20px;
 }
-.restaurant__card-icone > .far:hover {
-  color: #a85ddb;
-  background-color: cadetblue;
+.restaurant__card-icone:hover {
+  content: url(../../img/icons/heart-solid.svg);
+  color: red;
 }
 .restaurant__container {
   display: flex;
@@ -300,8 +302,7 @@ body {
 }
 
 .menu__column {
-  flex: 1 1 auto;
-  max-width: 32%;
+  flex: 1 1 350px;
 }
 
 .menu__card {
@@ -331,13 +332,15 @@ body {
 }
 .menu__card:hover .menu__card-animation {
   margin-right: 0;
+  transition-duration: 5s;
 }
 .menu__card:hover .menu__card-animation > .fas {
-  transform: rotate(180deg);
-  transition-duration: 0.5s;
+  transform: rotate(0deg);
+  transition-duration: 1s;
 }
 .menu__card:hover .menu__card-container {
   width: 85%;
+  transition-duration: 1s;
 }
 
 .menu__card-animation {
@@ -346,6 +349,14 @@ body {
   margin-right: -50px;
   margin-left: 10px;
   background-color: #99e2d1;
+  height: 61px;
+  align-items: center;
+}
+.menu__card-animation .fas {
+  color: white;
+  font-size: 16px;
+  margin-top: 23px;
+  transform: rotate(180deg);
 }
 
 .loader,
