--- a/assets/sass/layout/_restaurant.scss
+++ b/assets/sass/layout/_restaurant.scss
@@ -32,12 +32,14 @@
         }
         &-icone {
             padding-right: 20px;
+            height: 20px;
+            width: 20px;
             & > .far {
                 font-size: 20px;
-                &:hover {
-                    color: #a85ddb;
-                    background-color: cadetblue;
-                }
+            }
+            &:hover {
+                content: url(../../img/icons/heart-solid.svg);
+                color: red;
             }
         }
     }
