--- a/assets/sass/utils/_media.scss
+++ b/assets/sass/utils/_media.scss
@@ -27,7 +27,7 @@
         }
     }
     .menu__column{
-        max-width: 100%;
+        width: 100%;
     }
 }
 @media screen and (max-width: 950px) {
