--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,87 @@ h2 {
     width: 100%;
   }
 }
+.anim-1 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 0s;
+  animation-duration: 1s;
+}
+
+.anim-2 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 300ms;
+  animation-duration: 1s;
+}
+
+.anim-3 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 600ms;
+  animation-duration: 1s;
+}
+
+.anim-4 {
+  transform: scale(1);
+  animation-name: bounceIn 1s both;
+  animation-delay: 3s;
+  animation-duration: 1s;
+}
+
+.anim-5 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 4s;
+  animation-duration: 1s;
+}
+
+.anim-6 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 5s;
+  animation-duration: 1s;
+}
+
+.anim-7 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 6s;
+  animation-duration: 1s;
+}
+
+.anim-8 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 7s;
+  animation-duration: 1s;
+}
+
+.anim-9 {
+  transform: scale(1);
+  animation-name: bounceIn;
+  animation-delay: 8s;
+  animation-duration: 1s;
+}
+
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.3) translate3d(0, 0, 0);
+  }
+  50% {
+    opacity: 0.9;
+    transform: scale(1.1);
+  }
+  80% {
+    opacity: 1;
+    transform: scale(0.89);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) translate3d(0, 0, 0);
+  }
+}
 footer {
   background-color: #363636;
 }
