--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,4 @@
-@import "./utils/mixins", "./utils/variables", "./utils/media", "./utils/animations";
+@import "./utils/mixins", "./utils/variables", "./utils/media", "./utils/animations", "./utils/keyframes";
 @import "./layout/footer", "./layout/header", "./layout/location", "./layout/body", "./layout/restaurant", "./layout/reservation", "./layout/presentation", "./layout/menu", "./layout/loader";
 @import "./base/typography";
 @import "./pages/index";
