--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -95,3 +95,9 @@
         transform: rotate(180deg);
     }
 }
+.menu__command{
+    background-color: #f6f6f6;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding: 20px;
+}
