--- a/assets/sass/utils/_animations.scss
+++ b/assets/sass/utils/_animations.scss
@@ -1,18 +1,16 @@
 .anim-1 {
     animation-name: bounceIn;
-    animation-fill-mode: forwards;
     animation-duration: 4s;
-    animation: linear(to bottom);
 }
 .anim-2 {
     animation-name: bounceIn;
     animation-duration: 4s;
-    animation-delay: 200ms;
+    animation-delay: 1000ms;
 }
 .anim-3 {
     animation-name: bounceIn;
     animation-duration: 4s;
-    animation-delay: 400ms;
+    animation-delay: 2000ms;
 }
 .anim-4 {
     animation-name: bounceIn;
@@ -40,3 +38,6 @@
     animation-delay: 1600ms;
 }
 
+.menu_column {
+    opacity: 0;
+}
