--- a/assets/sass/layout/_menu.scss
+++ b/assets/sass/layout/_menu.scss
@@ -53,6 +53,7 @@
     display: flex;
     align-items: center;
     overflow: hidden;
+    opacity: 0;
     &-title > h4 {
         margin: 10px 5px;
     }
